--- a/SBBOL/Storyboards/Base.lproj/Main.storyboard
+++ b/SBBOL/Storyboards/Base.lproj/Main.storyboard
@@ -213,29 +213,29 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entered" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7k1-2A-dkO">
-                                                            <rect key="frame" x="27" y="11" width="97" height="38"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Translated" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvU-JB-B89">
-                                                            <rect key="frame" x="195" y="11" width="97" height="38"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="mJh-Sb-soO">
+                                                            <rect key="frame" x="20" y="11" width="374" height="38"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entered" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7k1-2A-dkO">
+                                                                    <rect key="frame" x="0.0" y="6" width="177" height="26.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Translated" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvU-JB-B89">
+                                                                    <rect key="frame" x="197" y="6" width="177" height="26.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="7k1-2A-dkO" firstAttribute="centerY" secondItem="WEr-Ai-vkT" secondAttribute="centerY" id="2Vo-5c-rdt"/>
-                                                        <constraint firstItem="7k1-2A-dkO" firstAttribute="width" secondItem="nvU-JB-B89" secondAttribute="width" id="3bc-z6-Rit"/>
-                                                        <constraint firstItem="7k1-2A-dkO" firstAttribute="leading" secondItem="WEr-Ai-vkT" secondAttribute="leading" constant="27" id="PjZ-8x-a5H"/>
-                                                        <constraint firstItem="nvU-JB-B89" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="7k1-2A-dkO" secondAttribute="trailing" constant="8" symbolic="YES" id="QQJ-U9-j4W"/>
-                                                        <constraint firstItem="nvU-JB-B89" firstAttribute="baseline" secondItem="7k1-2A-dkO" secondAttribute="baseline" id="ZSy-nQ-4eM"/>
-                                                        <constraint firstItem="nvU-JB-B89" firstAttribute="centerY" secondItem="WEr-Ai-vkT" secondAttribute="centerY" id="lhV-uI-KBT"/>
-                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nvU-JB-B89" secondAttribute="trailing" constant="20" symbolic="YES" id="ojs-Um-wjR"/>
-                                                        <constraint firstItem="nvU-JB-B89" firstAttribute="bottom" secondItem="WEr-Ai-vkT" secondAttribute="bottomMargin" id="sXU-9x-qmI"/>
-                                                        <constraint firstItem="nvU-JB-B89" firstAttribute="leading" secondItem="7k1-2A-dkO" secondAttribute="trailing" constant="71" id="x8D-W1-8Ie"/>
+                                                        <constraint firstItem="mJh-Sb-soO" firstAttribute="top" secondItem="WEr-Ai-vkT" secondAttribute="topMargin" id="5hc-jg-2Wg"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="mJh-Sb-soO" secondAttribute="trailing" id="NyW-E5-Z0G"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="mJh-Sb-soO" secondAttribute="bottom" id="fML-69-c6W"/>
+                                                        <constraint firstItem="mJh-Sb-soO" firstAttribute="leading" secondItem="WEr-Ai-vkT" secondAttribute="leadingMargin" id="vMi-iT-Lot"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
@@ -294,10 +294,10 @@
             </objects>
             <point key="canvasLocation" x="1834.7826086956522" y="-314.0625"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Animated Tab Bar Controller-->
         <scene sceneID="0wh-mb-4sp">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="1Gd-kb-6Bj" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="1Gd-kb-6Bj" customClass="AnimatedTabBarController" customModule="SBBOL" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="M8f-Ko-CJi">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
